# Veles

./: .dockerignore  .gitignore  Dockerfile  pyproject.toml
.github/workflows/: main.yaml
requirements/: prod.txt
veles/: config.py  database.py  main.py
veles/funds/: models.py  routes.py  schemas.py
veles/targets/: models.py  routes.py  schemas.py
