[tool.poetry]
name = "veles"
version = "0.1.0"
package-mode = false
description = "Budget advisor service api"
authors = ["Dima Kushchevskyi <d.kushchevskyi@sirinsoftware.com>"]
license = "MIT"
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
uvicorn = {extras = ["standard"], version = "^0.27.1"}
fastapi = "^0.110.0"
roothazardlib = "^1.6"

[tool.poetry.group.dev.dependencies]
pylint = "^3.1.0"
mypy = "^1.8.0"

# python3 -m pylint `find veles -name "*.py"`
# python3 -m mypy `find veles -name "*.py"`

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
